--- a/ig.ini
+++ b/ig.ini
@@ -2,3 +2,5 @@
 ig = input/contentig.xml
 template = fhir.base.template#0.4.0
 usage-stats-opt-out = false
+suppressedWarningFile = input/ignoreWarnings.txt
+fhir-version=4.0.1
