add output folder enabling github pages as a canonical url

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #####################
 temp
 template
-output
+# output
 
 # Don't commit this because it's so large #
 ###########################################
