add troubleshooting to deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,26 +11,29 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3  # Updated to v3
+      uses: actions/checkout@v3
 
     - name: Setup Node.js (optional if your project needs Node)
-      uses: actions/setup-node@v3  # Updated to v3
+      uses: actions/setup-node@v3
       with:
-        node-version: '16'  # Node.js 16 is more stable or upgrade to 20 if needed
+        node-version: '16'  # Update to 20 if needed
 
     - name: Build project
       run: |
         npm install
         npm run build
 
-    - name: List files in output (debugging step)
-      run: ls -la output
+    - name: List contents of the output directory
+      run: ls -la output  # Add this step to verify if the output directory has been created and files are there
 
     - name: Create docs directory if not exists
       run: mkdir -p docs
 
     - name: Copy output to docs for GitHub Pages
       run: mv output/* docs/
+
+    - name: List contents of docs directory (debugging step)
+      run: ls -la docs  # Check if files were moved correctly
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
