update ig.ini and contentig.xml

--- a/output/package.r4b.manifest.json
+++ b/output/package.r4b.manifest.json
@@ -1,6 +1,6 @@
 {
   "version" : "0.1.0",
-  "date" : "20240905063353",
+  "date" : "20240915185721",
   "notForPublication" : true,
-  "name" : "example.fhir.uv.contentig.r4b"
+  "name" : "psa-screening.fhir.uv.contentig.r4b"
 }
