--- a/ig.ini
+++ b/ig.ini
@@ -1,5 +1,5 @@
 [IG]
-ig = input/contentig.xml
+ig = input/contentig.json
 template = fhir.base.template#0.4.0
 usage-stats-opt-out = false
 suppressedWarningFile = input/ignoreWarnings.txt
