--- a/output/package.manifest.json
+++ b/output/package.manifest.json
@@ -1,7 +1,7 @@
 {
   "version" : "0.1.0",
   "fhirVersion" : ["4.0.1"],
-  "date" : "20240915185721",
-  "name" : "psa-screening.fhir.uv.contentig",
-  "jurisdiction" : "http://unstats.un.org/unsd/methods/m49/m49.htm#001"
+  "date" : "20240916111858",
+  "name" : "dhes.cds.prostate-cancer-screening",
+  "jurisdiction" : "http://unstats.un.org/unsd/methods/m49/m49.htm#US"
 }
