--- a/output/package.manifest.json
+++ b/output/package.manifest.json
@@ -1,7 +1,7 @@
 {
   "version" : "0.1.0",
   "fhirVersion" : ["4.0.1"],
-  "date" : "20240916111858",
+  "date" : "20240916123924",
   "name" : "dhes.cds.prostate-cancer-screening",
-  "jurisdiction" : "http://unstats.un.org/unsd/methods/m49/m49.htm#US"
+  "jurisdiction" : "urn:iso:std:iso:316#US"
 }
