--- a/ig.ini
+++ b/ig.ini
@@ -1,5 +1,6 @@
 [IG]
 ig = input/contentig.json
+title = Screening for Prostate Cancer - FHIR Implementation Guide
 template = fhir.base.template#0.4.0
 usage-stats-opt-out = false
 suppressedWarningFile = input/ignoreWarnings.txt
